grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    expression_statement: $ => choice(
      $.expression,
      seq(commaSep1($.expression), optional(',')),
      $.assignment,
      $.augmented_assignment,
      $.yield,
    ),

    return_statement: $ => seq(
      'return',
      optional($._expressions),
    ),

    _expressions: $ => choice(
      $.expression,
      $.expression_list,
    ),

    function_definition: $ => seq(
      optional(
        choice(
          'async',
          'match',
          seq('async', 'match'),
          seq('match', 'async'),
        )
      ),
      'def',
      choice(
        seq(
          field('name', $.identifier),
          field('type_parameters', optional($.type_parameter)),
          field('parameters', $.parameters),
        ),
        seq(
          field('left', $._infix_parameter),
          '`',
          field('name', $.identifier),
          '`',
          field('right', $._infix_parameter),
        ),
      ),
      optional(
        seq(
          '->',
          field('return_type', $.type),
        ),
      ),
      choice(
        seq(
          ':',
          field('body', $._suite),
        ),
        seq(
          '=',
          field('body', $._assignment_function_body),
          // field('body', choice(
          //   field('return', $.expression), // TODO this is the problem
          //   // alias($._assignment_function_body, $.block),
          // )),
        ),
      ),
    ),

    _assignment_function_body: $ => choice(
      seq(
        field('return', $.expression),
        $._newline,
      ),
      seq(
        $._indent,
        alias($.assignment_function_block, $.block),
      ),
      // I think this means that if you hit enter you get syntax highlighting even before typing body
      // alias($._newline, $.block),
    ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    lambda_parameters: $ => $._parameters,

    type_parameter: $ => seq(
      '[',
      commaSep1($.type),
      optional(','),
      ']',
    ),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    decorated_definition: $ => seq(
      repeat1($.decorator),
      field('definition', choice(
        $.class_definition,
        $.function_definition,
      )),
    ),

    decorator: $ => seq(
      '@',
      $.expression,
      $._newline,
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    _infix_parameter: $ => choice(
      $.identifier,
      seq(
        '(',
        $.default_parameter,
        ')',
      ),
      // TODO can infix parameters have any of the other types above?
    ),

    default_parameter: $ => seq(
      field('name', choice($.identifier, $.tuple_pattern)),
      '=',
      field('value', $.expression),
    ),

    binary_operator: $ => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '×', PREC.times],
        [prec.left, '@', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, '÷', PREC.times],
        [prec.left, '%', PREC.times],
        [prec.left, '//', PREC.times],
        [prec.left, '÷/', PREC.times],
        [prec.right, '**', PREC.power],
        [prec.right, '↑', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '∪', PREC.bitwise_or],
        [prec.left, '&', PREC.bitwise_and],
        [prec.left, '∩', PREC.bitwise_and],
        [prec.left, '^', PREC.xor],
        [prec.left, '<<', PREC.shift],
        [prec.left, '«', PREC.shift],
        [prec.left, '>>', PREC.shift],
        [prec.left, '»', PREC.shift],
        [prec.left, '??', PREC.none_coalesce],
      ];

      // @ts-ignore
      return choice(...table.map(([fn, operator, precedence]) => fn(precedence, seq(
        field('left', $.primary_expression),
        // @ts-ignore
        field('operator', operator),
        field('right', $.primary_expression),
      ))));
    },

    lambda: $ => prec(PREC.lambda, choice(
      seq(
        choice('lambda', 'λ'),
        field('parameters', optional($.lambda_parameters)),
        ':',
        field('body', $.expression),
      ),
      prec.right(seq(
        optional(field('parameters', alias(choice($.parameters, $.lambda_single_parameter), $.lambda_parameters))),
        choice('=>', '->', '⇒', '→'),
        field('body', $.expression),
      )),
    )),

    assignment: $ => seq(
      field('left', $._left_hand_side),
      choice(
        seq('=', field('right', $._right_hand_side)),
        seq(':', field('type', $.type)),
        seq(':', field('type', $.type), '=', field('right', $._right_hand_side)),
      ),
    ),

    augmented_assignment: $ => seq(
      field('left', $._left_hand_side),
      field('operator', choice(
        '+=', '-=', '*=', '/=', '@=', '//=', '%=', '**=',
        '>>=', '<<=', '&=', '^=', '|=',
        '|>=',
        '|*>=',
        '|**>=',
        '<|=',
        '<*|=',
        '<**|=',
        '|?>=',
        '|?*>=',
        '|?**>=',
        '<?|=',
        '<*?|=',
        '<**?|=',
        '..=',
        '..>=',
        '<..=',
        '..*>=',
        '<*..=',
        '..**>=',
        '<**..=',
        '..?>=',
        '<?..=',
        '..?*>=',
        '<*?..=',
        '..?**>=',
        '<**?..=',
        '::=',
        '??=',
      )),
      field('right', $._right_hand_side),
    ),

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    _right_hand_side: $ => choice(
      $.expression,
      $.expression_list,
      $.assignment,
      $.augmented_assignment,
      $.pattern_list,
      $.yield,
    ),

    call: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      optional('?'),
      field('arguments', choice(
        $.generator_expression,
        $.argument_list,
      )),
    )),

    pipe: $ => choice(
      $._pipe_forward,
      $._pipe_backward,
    ),

    _pipe_forward: $ => prec.left(PREC.pipe, seq(
      field('from', $.primary_expression),
      field('operator', $._forward_pipe_operator),
      field('to', $._pipe_to_expression),
    )),

    _pipe_backward: $=> prec.left(PREC.pipe, seq(
      field('to', $._pipe_to_expression),
      field('operator', $._backward_pipe_operator),
      field('from', $.primary_expression),
    )),

    typed_parameter: $ => prec(PREC.typed_parameter, seq(
      choice(
        $.identifier,
        $.list_splat_pattern,
        $.dictionary_splat_pattern,
      ),
      ':',
      field('type', $.type),
    )),

    type: $ => choice(
      $.expression,
      $.splat_type,
      $.generic_type,
      $.union_type,
      $.protocol_intersection_type,
      $.constrained_type,
      $.member_type,
    ),
    generic_type: $ => prec(1, seq($.identifier, $.type_parameter)),
    tuple: $ => seq(
      '(',
      optional($._collection_elements),
      ')',
    ),

    _collection_elements: $ => seq(
      commaSep1(choice(
        $.expression, $.yield, $.list_splat, $.parenthesized_list_splat,
      )),
      optional(','),
    ),

    integer: _ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
        optional(/[Ll]/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional(/[Ll]/), // long numbers
          optional(/[jJ]/), // complex numbers
        ),
      ),
    )),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    await: $ => prec(PREC.unary, seq(
      'await',
      $.primary_expression,
    )),

    comment: _ => token(seq('#', /.*/)),
